--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Echo Learning Assistant</title>
-    <link rel="stylesheet" href="popup.css">
+    <link rel="stylesheet" href="../css/popup.css">
 </head>
 <body>
     <div class="container">
@@ -104,8 +104,8 @@
         </footer>
     </div>
 
-    <script src="ai.js"></script>
-    <script src="popup.js"></script>
+    <script src="../js/ai.js"></script>
+    <script src="../js/popup.js"></script>
 </body>
 </html>
 
